--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <h1>Hello World</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi,
+      voluptate?
+    </p>
   </body>
 </html>
